2008-06-26  Sam Weinig  <sam@webkit.org>

        Update result after adding new progress events to XMLHttpRequest.

        * fast/dom/xmlhttprequest-get-expected.txt:

2008-06-26  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        https://bugs.webkit.org/show_bug.cgi?id=19767
        REGRESSION: Crash in sort() when visiting http://www.onnyturf.com/subway/

        * fast/js/avl-crash-expected.txt: Added.
        * fast/js/avl-crash.html: Added.
        * fast/js/resources/avl-crash.js: Added.

2008-06-25  Jean-Charles Verdié  <jcverdie@pleyo.com>

        Reviewed by Geoffrey Garen.

        - https://bugs.webkit.org/show_bug.cgi?id=19581
          Disable hanging test

        * dom/xhtml/level2/html/HTMLFrameElement09.xhtml: Removed.
        * dom/xhtml/level2/html/HTMLFrameElement09.xhtml-disabled: Copied from LayoutTests/dom/xhtml/level2/html/HTMLFrameElement09.xhtml.

2008-06-25  Beth Dakin  <bdakin@apple.com>

        Reviewed by Sam Weinig.

        New tests that exercise the ability to query the following 
        accessibility attributes individually: role, title, and 
        description.

        * accessibility/aria-describedby-on-input-expected.txt: Added.
        * accessibility/aria-describedby-on-input.html: Added.
        * accessibility/aria-labelledby-on-input-expected.txt: Added.
        * accessibility/aria-labelledby-on-input.html: Added.
        * accessibility/aria-roles-expected.txt: Added.
        * accessibility/aria-roles.html: Added.
        * accessibility/document-attributes.html:
        * accessibility/resources: Added.
        * accessibility/resources/cake.png: Added.

2008-06-25  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by John.
        
        <rdar://problem/5994480> Line break lost on some pastes
        
        These demonstrate fixes:
        * editing/inserting/5994480.html: Added.
        * editing/inserting/5994480-expected.txt: Added.