@@ -1,3 +1,11 @@
+2008-06-26  Beth Dakin  <bdakin@apple.com>
+
+        Reviewed by Sam.
+
+        Updated results that will pass on all platforms.
+
+        * accessibility/document-attributes-expected.txt:
+
 2008-06-26  Sam Weinig  <sam@webkit.org>
 
         Update result after adding new progress events to XMLHttpRequest.
